--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "modern-normalize": "^3.0.1",
     "validator": "^13.15.26",
     "vite-plugin-full-reload": "^1.2.0",
