--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "axios": "^1.13.2",
     "modern-normalize": "^3.0.1",
+    "react-hook-form": "^7.69.0",
     "validator": "^13.15.26",
     "vite-plugin-full-reload": "^1.2.0",
-    "vite-plugin-html-inject": "^1.1.2"
+    "vite-plugin-html-inject": "^1.1.2",
+    "yup": "^1.7.1"
   }
 }
