--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "firebase": "^12.7.0",
     "modern-normalize": "^3.0.1",
     "react-hook-form": "^7.69.0",
     "validator": "^13.15.26",
