--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
     "glob": "^11.0.0",
+    "globals": "^17.0.0",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^7.3.0"
