--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
+    "izitoast": "^1.4.0",
     "modern-normalize": "^3.0.1",
     "react-hook-form": "^7.69.0",
     "validator": "^13.15.26",
